1. 调整 Usage 解析方案