@@ -1,11 +1,13 @@
 package org.chobit.knot.gateway.upstream.protocol;
 
+import org.apache.commons.lang3.StringUtils;
 import org.chobit.knot.gateway.constants.GatewayHeaders;
 import org.chobit.knot.gateway.constants.enums.ProxyErrorCodeEnum;
 import org.chobit.knot.gateway.exception.GatewayUpstreamException;
 import org.chobit.knot.gateway.model.ProxyResult;
 import org.chobit.knot.gateway.upstream.UpstreamRequestContext;
 import org.chobit.knot.gateway.upstream.provider.UpstreamProviderAdapter;
+import org.chobit.knot.gateway.upstream.usage.UsageExtractorRegistry;
 import org.springframework.http.MediaType;
 import org.springframework.web.client.RestClient;
 
@@ -15,9 +17,11 @@ import org.springframework.web.client.RestClient;
 public abstract class AbstractUpstreamProtocolExecutor implements UpstreamProtocolExecutor {
 
     private final RestClient restClient;
+    private final UsageExtractorRegistry usageExtractorRegistry;
 
-    protected AbstractUpstreamProtocolExecutor(RestClient restClient) {
+    protected AbstractUpstreamProtocolExecutor(RestClient restClient, UsageExtractorRegistry usageExtractorRegistry) {
         this.restClient = restClient;
+        this.usageExtractorRegistry = usageExtractorRegistry;
     }
 
     /**
@@ -26,7 +30,7 @@ public abstract class AbstractUpstreamProtocolExecutor implements UpstreamProtoc
     @Override
     public ProxyResult execute(UpstreamRequestContext context, UpstreamProviderAdapter adapter) {
         String path = adapter.resolvePath(context, defaultPath(context));
-        if (path == null || path.isBlank()) {
+        if (StringUtils.isBlank(path)) {
             throw new GatewayUpstreamException(
                     "api protocol is not configured: " + context.protocol().code(),
                     ProxyErrorCodeEnum.API_PROTOCOL_NOT_CONFIGURED.code()
@@ -37,18 +41,20 @@ public abstract class AbstractUpstreamProtocolExecutor implements UpstreamProtoc
             RestClient.RequestBodySpec spec = restClient.post()
                     .uri(joinUrl(context.provider().getBaseUrl(), path))
                     .contentType(MediaType.APPLICATION_JSON)
-                    .accept(MediaType.APPLICATION_JSON);
-            if (context.traceparent() != null && !context.traceparent().isBlank()) {
-                spec.header(GatewayHeaders.TRACEPARENT, context.traceparent().trim());
+                    .accept(MediaType.APPLICATION_JSON, MediaType.TEXT_EVENT_STREAM);
+            if (StringUtils.isNotBlank(context.traceparent())) {
+                spec.header(GatewayHeaders.TRACEPARENT, StringUtils.trim(context.traceparent()));
             }
             adapter.applyHeaders(spec, context);
             String responseBody = spec.body(adapter.buildRequestBody(context))
                     .retrieve()
                     .body(String.class);
+            String handledResponseBody = adapter.handleResponse(responseBody, context);
             return new ProxyResult(
-                    adapter.handleResponse(responseBody, context),
+                    handledResponseBody,
                     context.provider().getId(),
-                    context.model().getId()
+                    context.model().getId(),
+                    usageExtractorRegistry.extract(handledResponseBody, context, adapter)
             );
         } catch (Exception e) {
             throw new GatewayUpstreamException(e.getMessage(), ProxyErrorCodeEnum.UPSTREAM_ERROR.code());
@@ -60,8 +66,8 @@ public abstract class AbstractUpstreamProtocolExecutor implements UpstreamProtoc
     }
 
     private String joinUrl(String baseUrl, String path) {
-        String base = baseUrl == null ? "" : baseUrl.trim();
-        String p = path == null ? "" : path.trim();
+        String base = StringUtils.trimToEmpty(baseUrl);
+        String p = StringUtils.trimToEmpty(path);
         if (base.endsWith("/") && p.startsWith("/")) {
             return base.substring(0, base.length() - 1) + p;
         }
